--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,19 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap");
- 
-@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+
+@import 'tailwindcss';
 @plugin "tailwindcss-animate";
- 
+
 @custom-variant dark (&:is(.dark *));
- 
+
 @font-face {
-	font-family: "Cal Sans";
+	font-family: 'Cal Sans';
 	font-style: normal;
 	font-weight: 600;
 	font-display: swap;
-	src: url("/CalSans-SemiBold.woff2") format("woff2");
+	src: url('/CalSans-SemiBold.woff2') format('woff2');
 }
- 
+
 :root {
 	/* Colors */
 	--background: hsl(0 0% 100%);
@@ -35,10 +35,10 @@
 	--destructive: hsl(347 77% 50%);
 	--tertiary: hsl(37.7 92.1% 50.2%);
 	--line: hsl(0 0% 100%);
- 
+
 	/* black */
 	--contrast: hsl(0 0% 0%);
- 
+
 	/* Shadows */
 	--shadow-mini: 0px 1px 0px 1px rgba(0, 0, 0, 0.04);
 	--shadow-mini-inset: 0px 1px 0px 0px rgba(0, 0, 0, 0.04) inset;
@@ -48,7 +48,7 @@
 	--shadow-card: 0px 2px 0px 1px rgba(0, 0, 0, 0.04);
 	--shadow-date-field-focus: 0px 0px 0px 3px rgba(24, 24, 27, 0.17);
 }
- 
+
 .dark {
 	/* Colors */
 	--background: hsl(0 0% 5%);
@@ -72,7 +72,7 @@
 	--tertiary: hsl(61.3 100% 82.2%);
 	/* white */
 	--contrast: hsl(0 0% 100%);
- 
+
 	/* Shadows */
 	--shadow-mini: 0px 1px 0px 1px rgba(0, 0, 0, 0.3);
 	--shadow-mini-inset: 0px 1px 0px 0px rgba(0, 0, 0, 0.5) inset;
@@ -82,7 +82,7 @@
 	--shadow-card: 0px 2px 0px 1px rgba(0, 0, 0, 0.4);
 	--shadow-date-field-focus: 0px 0px 0px 3px rgba(244, 244, 245, 0.1);
 }
- 
+
 @theme inline {
 	--color-background: var(--background);
 	--color-background-alt: var(--background-alt);
@@ -104,7 +104,7 @@
 	--color-tertiary: var(--tertiary);
 	--color-line: var(--line);
 	--color-contrast: var(--contrast);
- 
+
 	--shadow-mini: var(--shadow-mini);
 	--shadow-mini-inset: var(--shadow-mini-inset);
 	--shadow-popover: var(--shadow-popover);
@@ -112,9 +112,9 @@
 	--shadow-btn: var(--shadow-btn);
 	--shadow-card: var(--shadow-card);
 	--shadow-date-field-focus: var(--shadow-date-field-focus);
- 
+
 	--text-xxs: 10px;
- 
+
 	--radius-card: 16px;
 	--radius-card-lg: 20px;
 	--radius-card-sm: 10px;
@@ -124,12 +124,12 @@
 	--radius-9px: 9px;
 	--radius-10px: 10px;
 	--radius-15px: 15px;
- 
+
 	--spacing-input: 3rem;
 	--spacing-input-sm: 2.5rem;
- 
+
 	--breakpoint-desktop: 1440px;
- 
+
 	--animate-accordion-down: accordion-down 0.2s ease-out;
 	--animate-accordion-up: accordion-up 0.2s ease-out;
 	--animate-caret-blink: caret-blink 1s ease-out infinite;
@@ -141,12 +141,12 @@
 	--animate-enter-from-right: enter-from-right 0.2s ease;
 	--animate-exit-to-left: exit-to-left 0.2s ease;
 	--animate-exit-to-right: exit-to-right 0.2s ease;
- 
-	--font-sans: "Inter", "sans-serif";
-	--font-mono: "Source Code Pro", "monospace";
-	--font-alt: "Courier", "sans-serif";
-	--font-display: "Cal Sans", "sans-serif";
- 
+
+	--font-sans: 'Inter', 'sans-serif';
+	--font-mono: 'Source Code Pro', 'monospace';
+	--font-alt: 'Courier', 'sans-serif';
+	--font-display: 'Cal Sans', 'sans-serif';
+
 	@keyframes accordion-down {
 		from {
 			height: 0;
@@ -155,7 +155,7 @@
 			height: var(--bits-accordion-content-height);
 		}
 	}
- 
+
 	@keyframes accordion-up {
 		from {
 			height: var(--bits-accordion-content-height);
@@ -164,7 +164,7 @@
 			height: 0;
 		}
 	}
- 
+
 	@keyframes caret-blink {
 		0%,
 		70%,
@@ -176,7 +176,7 @@
 			opacity: 0;
 		}
 	}
- 
+
 	@keyframes enter-from-right {
 		from {
 			opacity: 0;
@@ -187,7 +187,7 @@
 			transform: translateX(0);
 		}
 	}
- 
+
 	@keyframes enter-from-left {
 		from {
 			opacity: 0;
@@ -198,7 +198,7 @@
 			transform: translateX(0);
 		}
 	}
- 
+
 	@keyframes exit-to-right {
 		from {
 			opacity: 1;
@@ -209,7 +209,7 @@
 			transform: translateX(200px);
 		}
 	}
- 
+
 	@keyframes exit-to-left {
 		from {
 			opacity: 1;
@@ -220,7 +220,7 @@
 			transform: translateX(-200px);
 		}
 	}
- 
+
 	@keyframes scale-in {
 		from {
 			opacity: 0;
@@ -231,7 +231,7 @@
 			transform: rotateX(0deg) scale(1);
 		}
 	}
- 
+
 	@keyframes scale-out {
 		from {
 			opacity: 1;
@@ -242,7 +242,7 @@
 			transform: rotateX(-10deg) scale(0.95);
 		}
 	}
- 
+
 	@keyframes fade-in {
 		from {
 			opacity: 0;
@@ -251,7 +251,7 @@
 			opacity: 1;
 		}
 	}
- 
+
 	@keyframes fade-out {
 		from {
 			opacity: 1;
@@ -261,7 +261,7 @@
 		}
 	}
 }
- 
+
 @layer base {
 	*,
 	::after,
@@ -270,7 +270,7 @@
 	::file-selector-button {
 		border-color: var(--color-border-card, currentColor);
 	}
- 
+
 	* {
 		@apply border-border;
 	}
@@ -279,29 +279,29 @@
 		font-variation-settings: normal;
 		scrollbar-color: var(--bg-muted);
 	}
- 
+
 	body {
 		@apply bg-background text-foreground;
 		font-feature-settings:
-			"rlig" 1,
-			"calt" 1;
+			'rlig' 1,
+			'calt' 1;
 	}
- 
+
 	::selection {
 		background: #fdffa4;
 		color: black;
 	}
 }
- 
+
 @layer components {
 	*:not(body):not(.focus-override) {
 		outline: none !important;
 		&:focus-visible {
-			@apply focus-visible:ring-foreground focus-visible:ring-offset-background focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1;
+			@apply focus-visible:ring-foreground focus-visible:ring-offset-background focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:outline-hidden;
 		}
 	}
- 
+
 	.link {
-		@apply hover:text-foreground/80 focus-visible:ring-foreground focus-visible:ring-offset-background rounded-xs focus-visible:outline-hidden inline-flex items-center gap-1 font-medium underline underline-offset-4 focus-visible:ring-2 focus-visible:ring-offset-2;
+		@apply hover:text-foreground/80 focus-visible:ring-foreground focus-visible:ring-offset-background inline-flex items-center gap-1 rounded-xs font-medium underline underline-offset-4 focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden;
 	}
 }
